65623 - add rest of the index markers